--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "@jeswr/rdfjs-sign",
   "version": "0.0.0-development",
   "description": "",
   "main": "dist/index.js",
@@ -32,23 +32,24 @@
   },
   "homepage": "",
   "devDependencies": {
-    "@types/jest": "^29.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
+    "@types/jest": "^29.5.12",
+    "@types/n3": "^1.16.4",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.3.1",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "pre-commit": "^1.2.2",
-    "semantic-release": "^20.0.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "semantic-release": "^23.0.6",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.3"
   },
   "jest": {
     "preset": "ts-jest",
     "collectCoverage": true,
     "coverageReporters": [
-      "json-summary", 
+      "json-summary",
       "text",
       "lcov"
     ],
@@ -83,5 +84,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@rdfjs/types": "^1.1.0",
+    "n3": "^1.17.3",
+    "rdfjs-c14n": "^3.1.0"
   }
 }
