--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20]
+        node-version: [20, 21]
 
     steps:
     - uses: actions/checkout@v4
