--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/jeswr/rdfjs-sign"
   },
   "keywords": [],
   "author": "Jesse Wright <jmwright.045@gmail.com>",
