chore: specifiy minimum engine

--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
     "@rdfjs/types": "^1.1.0",
     "n3": "^1.17.3",
     "rdfjs-c14n": "^3.1.0"
+  },
+  "engines": {
+    "node": ">= 20.0.0"
   }
 }
