--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeswr/rdfjs-sign"
+    "url": "https://github.com/jeswr/rdfjs-sign.git"
   },
   "keywords": [
     "RDF",
@@ -96,6 +96,6 @@
     "rdfjs-c14n": "^3.1.0"
   },
   "engines": {
-    "node": ">= 20.0.0"
+    "node": ">=20.0.0"
   }
 }
