--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeswr/rdfjs-sign.git"
+    "url": "git+https://github.com/jeswr/rdfjs-sign.git"
   },
   "keywords": [
     "RDF",
