--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
+    "jest-mock-console": "^2.0.0",
     "n3": "^1.17.3",
     "pre-commit": "^1.2.2",
     "semantic-release": "^23.0.6",
@@ -93,9 +94,13 @@
   },
   "dependencies": {
     "@rdfjs/types": "^1.1.0",
+    "rdf-dereference-store": "^1.1.0",
     "rdfjs-c14n": "^3.1.0"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "bin": {
+    "sign": "dist/bin/index.js"
   }
 }
